# helm-charts

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  Makefile  README.md  _README.md.gotmpl  bump-result.json  values.schema.json
.github/workflows/: auto-push-tag-helm-charts.yaml  manually-push-tag-helm-chart.yaml  manually-release-helm-charts.yaml  pr-chart-management.yaml  pre-commit.yaml  push-helm-charts.yaml  release-helm-chart-automatic.yaml  release-helm-chart-manual.yaml  unit-tests.yaml  zizmor.yaml
deprecated/: README.md
examples/example-app/: Chart.yaml  values.yaml
mozcloud-deployment/application/: Chart.yaml
mozcloud-gateway/application/: Chart.yaml  README.md  README.md.gotmpl  values.schema.json  values.yaml
mozcloud-ingress/application/: Chart.yaml  README.md  README.md.gotmpl  values.schema.json  values.yaml
mozcloud-job/application/: Chart.yaml  README.md  linter_values.yaml  values.schema.json  values.yaml
mozcloud-kit/application/: Chart.yaml  values.schema.json
mozcloud-opentelemetry/: Chart.yaml
mozcloud-opentelemetry/application/: Chart.yaml  README.md  linter_values.yaml  values.schema.json  values.yaml
mozcloud-opentelemetry/templates/: _helpers.tpl  instrumentation.yaml  (+1 more)
mozcloud-service/: Chart.yaml  values.yaml
mozcloud-shared-data/: README.md
opentelemetry-templates/: Chart.yaml  values.yaml
policy/: README.md  helm-automerge.rego
scripts/: README.md  cli.py  helm2mermaid.py  pyproject.toml
scripts/chartkit/: charts.py  cli.py  files.py  git.py  mermaid.py  versions.py
scripts/cli/: charts.py  mermaid.py
(+525 files in other folders)
